homeassistant/30-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: hass
  namespace: homeassistant
spec:
  ports:
  - name: default
    nodePort: 30011
    port: 8124
    protocol: TCP
    targetPort: 8123
  - name: homekit
    nodePort: 30190
    port: 51827
    protocol: UDP
    targetPort: 51827
  selector:
    app: hass
  sessionAffinity: None
  type: NodePort
